Add Daily Case ( JSON ) button, unfinished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Safehub</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="maps">Maps</string>
     <string name="privacyPolicy">Privacy Policy and ToS</string>
+    <string name="dailyCase">Daily Case</string>
 </resources>
