--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="maps">Maps</string>
     <string name="privacyPolicy">Privacy Policy and ToS</string>
     <string name="dailyCase">Daily Case</string>
+    <string name="requestData">Parse Data</string>
 </resources>
