--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="privacyPolicy">Privacy Policy and ToS</string>
     <string name="dailyCase">Daily Case</string>
     <string name="requestData">Parse Data</string>
+    <string name="imageDesc">Safehub logo for content filling on Daily case app</string>
 </resources>
