--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,17 @@
 <resources>
     <string name="app_name">Safehub</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="maps">Maps</string>
+    <string name="maps">Lihat Peta</string>
     <string name="privacyPolicy">Privacy Policy and ToS</string>
     <string name="dailyCase">Daily Case</string>
     <string name="requestData">Parse Data</string>
     <string name="imageDesc">Safehub logo for content filling on Daily case app</string>
+    <string name="positifDesc">Orang terkonfirmasi\npostif COVID-19</string>
+    <string name="meninggalDesc">Orang menginggal\nakibat COVID-19</string>
+    <string name="dirawatDesc">Orang dirawat\nakibat COVID-19</string>
+    <string name="sembuhDesc">Orang sembuh dari COVID-19</string>
+    <string name="rs">Rumah Sakit Terdekat</string>
+    <string name="jmlODP">Jumlah ODP</string>
+    <string name="jmlPDP">Jumlah PDP</string>
+    <string name="search">Search</string>
 </resources>
